--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
 /* Empty file for template. Remember to edit only this file and not the HTML file */
+@import url('https://fonts.googleapis.com/css2?family=Island+Moments&display=swap');
+* {
+    color: white;
+}
+body {
+    background-image: url(sakuras-shadowed.png);
+    margin-top: 0;
+    left: 0; 
+    top: 0;
+    display: flex;
+}
+header { 
+    margin-top: 5vw;
+    margin-left: 5vw;
+    background-color: #B11D56;
+    width: 79.234vw;
+    height: 10.868vw;
+    box-shadow: 
+        0 4px 10px rgba(96, 52, 67, 0.5), /* First shadow */
+        0 8px 20px rgba(0, 0, 0, 0.3); /* Second shadow */
+    display: flex;
+    flex-direction: column;
+    font-family: "Island Moments", cursive;
+    text-shadow: 4px 4px 0 black;
+    text-decoration: none;
+ 
+}
+
+#zen-intro [role="banner"] h1 {
+    margin-left: 1vw;
+    font-weight: 300;
+    font-size: 96px;
+    font-style: normal;
+    margin-top: 5px;
+    margin-bottom: 0;
+    text-transform: uppercase;
+}
+#zen-intro [role="banner"] h2  {
+    margin-left: 2.5vw;
+    font-weight: 300;
+    font-size: 40px;
+    font-style: normal;
+    margin-top: 0px;
+    margin-bottom: 0;
+
+}
+
